objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Customer Asset Case Process</fullName>
        <description>Open new case for customer assets findings</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Escalated to CMB</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Paralign Devices Processes</fullName>
        <description>Cases for Paralign devices maintenance</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting for user response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Product Support Processes</fullName>
        <description>Reporting problems with Products, calibration etc.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>PM_Level2_Support</fullName>
        </values>
        <values>
            <fullName>Remote Support Scheduled</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Waiting for customer response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Quotation Support Process</fullName>
        <description>To provide a budgetary offer and a structural plan</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Case Processes</fullName>
        <description>Reporting problems with CRM</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - done</fullName>
        </values>
        <values>
            <fullName>Closed - rejected</fullName>
        </values>
        <values>
            <fullName>Escalated to CMB</fullName>
        </values>
        <values>
            <fullName>Escalated to Salesforce Support</fullName>
        </values>
        <values>
            <fullName>Escalated to plug in support</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Ready for Deployment</fullName>
        </values>
        <values>
            <fullName>Ready for testing</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Waiting for user response</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Assing_to_Business_Unit__c</fullName>
        <description>&quot;Assign to Business Unit&quot; field is used to setting sharings for specific Business Unit employees.</description>
        <formula>Text(ptt_Assigned_to__r.sf42_Business_Unit__c)</formula>
        <label>Assing to Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Post__c</fullName>
        <inlineHelpText>Link to Chatter post.</inlineHelpText>
        <label>Chatter Post</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you would like to speak to someone in further detail about the way we handled this support issue please check the box below.</inlineHelpText>
        <label>Contact Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Asset_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Asset__c.Parent_Customer_Asset__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer_Asset__c</valueField>
            </filterItems>
            <infoMessage>Please search for component name. It is not displayed automatically.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Asset__c</referenceTo>
        <relationshipLabel>Cases (Component)</relationshipLabel>
        <relationshipName>Cases_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Asset</label>
        <referenceTo>Customer_Asset__c</referenceTo>
        <relationshipLabel>Cases (Customer Asset)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <description>Used to store feedback on case.</description>
        <inlineHelpText>How can we improve the way we handle your support calls?</inlineHelpText>
        <label>Customer Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Diagnosis Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SDIC_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Correction Code, Diagnosis Code</value>
            </filterItems>
            <filterItems>
                <field>SDIC_Code__c.Name</field>
                <operation>notContain</operation>
                <value>inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SDIC_Code__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Description_DE_2__c</fullName>
        <formula>Error_Code__r.Code_Description_DE_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error Description DE 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description_DE__c</fullName>
        <formula>Error_Code__r.Code_Description_DE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error Description DE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description_EN_2__c</fullName>
        <formula>Error_Code__r.Code_Description_EN_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error Description EN 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description_EN__c</fullName>
        <formula>Error_Code__r.Code_Description_EN__c</formula>
        <label>Error Description EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type_DE__c</fullName>
        <formula>Error_Code__r.Code_Type_DE__c</formula>
        <label>Error Type DE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type_EN__c</fullName>
        <formula>Error_Code__r.Code_Type_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error Type EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_time_min__c</fullName>
        <inlineHelpText>How many time is required for this task?</inlineHelpText>
        <label>Estimated time (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether or not feedback has been automatically requested. Set by a workflow rule.</description>
        <inlineHelpText>Used to determine whether or not feedback has been automatically requested. Set by a workflow rule.</inlineHelpText>
        <label>SETUP Feedback Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTT_Date_Time_In_Progress__c</fullName>
        <description>Filled in by Trigger when Status is changed to In Progress</description>
        <label>Date/Time In Progress</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PTT_Related_to__c</fullName>
        <inlineHelpText>Record link or ID or object name.</inlineHelpText>
        <label>Related to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTT_Response_time_txt__c</fullName>
        <description>Counts how many Days hours and minutes passed since case was opened till status was changet to In Progress</description>
        <formula>IF ( PTT_Response_time_value__c &gt; 0,
TEXT(FLOOR( PTT_Response_time_value__c)) &amp; &quot; days &quot; &amp;
TEXT( FLOOR( 24 * ( PTT_Response_time_value__c - FLOOR(PTT_Response_time_value__c) ))) &amp; &quot; hours &quot; &amp;
TEXT( ROUND(60 * (ROUND( 24 * ( PTT_Response_time_value__c - FLOOR(PTT_Response_time_value__c) ),8) - FLOOR(
ROUND( 24 * ( PTT_Response_time_value__c - FLOOR(PTT_Response_time_value__c) ),8)) ),0)) &amp; &quot; minutes&quot;
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTT Response time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTT_Response_time_value__c</fullName>
        <description>Time Service Factor.
Time since task was posted till status was changed to In Progress</description>
        <formula>PTT_Date_Time_In_Progress__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTT Response time value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTT_SLA_level__c</fullName>
        <label>SLA level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PTT_Time_spent_txt__c</fullName>
        <description>SLA Turn-Around Time.
Time spent on task in HH:MM Calculated since &quot;In progress&quot; to &quot;Closed&quot; time</description>
        <formula>IF ( PTT_Time_spent_value__c &gt; 0,
TEXT(FLOOR( PTT_Time_spent_value__c)) &amp; &quot; days &quot; &amp;
TEXT( FLOOR( 24 * ( PTT_Time_spent_value__c - FLOOR(PTT_Time_spent_value__c) ))) &amp; &quot; hours &quot; &amp;
TEXT( ROUND(60 * (ROUND( 24 * ( PTT_Time_spent_value__c - FLOOR(PTT_Time_spent_value__c) ),8) - FLOOR(
ROUND( 24 * ( PTT_Time_spent_value__c - FLOOR(PTT_Time_spent_value__c) ),8)) ),0)) &amp; &quot; minutes&quot;
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTT Time spent on task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTT_Time_spent_value__c</fullName>
        <description>SLA Turn-Around Time.
Time spent on task in HH:MM Calculated since &quot;In progress&quot; to &quot;Closed&quot; time</description>
        <formula>ClosedDate -  PTT_Date_Time_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTT Time spent on task value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_sortable__c</fullName>
        <formula>CASE( Priority,
&quot;High&quot;, &quot;1 High&quot;,
&quot;Medium&quot;, &quot;2 Medium&quot;,
&quot;Low&quot;, &quot;3 Low&quot;,
&quot;4 None&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Support_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set Opportunity related for Quotation Support</inlineHelpText>
        <label>Quotation Support Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Quotation Support</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases (Quotation Support)</relationshipLabel>
        <relationshipName>CasesQuotationSupport</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportCard_Send__c</fullName>
        <formula>MOD(VALUE(CaseNumber),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to determine whether to send an email requesting feedback following a closed case. This can be amended to be sent every &apos;N&apos; cases.</inlineHelpText>
        <label>ReportCard: Send</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_solutin_details_to__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check that field if you want to notify Contact User with email about solution.</inlineHelpText>
        <label>Send solutin details to Contact User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Demos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services &amp; Demos</label>
        <referenceTo>Service_and_Demontration__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pttCaseCreatorBusinessUnitForSharings__c</fullName>
        <formula>TEXT(CreatedBy.sf42_Business_Unit__c)</formula>
        <label>Creator Business Unit for sharing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Assigned_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains who is responsible to solve the problem.</description>
        <label>Assigned to</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria. Field Assigned to is required.</errorMessage>
            <filterItems>
                <field>User.Division</field>
                <operation>contains</operation>
                <value>Technical Support, CRM Support</value>
            </filterItems>
            <filterItems>
                <field>User.Email</field>
                <operation>equals</operation>
                <value>edwin.becker@pruftechnik.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Case_Owner_Business_Unit__c</fullName>
        <formula>TEXT(Owner:User.sf42_Business_Unit__c)</formula>
        <label>Owner Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Changelog_link__c</fullName>
        <label>Changelog link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ptt_Contact_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Main contact person for this case (Salesforce User).</inlineHelpText>
        <label>Contact User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Create_Date_Date_Only__c</fullName>
        <formula>TEXT(DATEVALUE(( CreatedDate )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date - Date Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Creator_Business_Unit__c</fullName>
        <label>Creator Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Dubai</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany - CM</fullName>
                </value>
                <value>
                    <fullName>Germany - Headquarters</fullName>
                </value>
                <value>
                    <fullName>Germany - NDT</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Poland Technology</fullName>
                </value>
                <value>
                    <fullName>Poland Wibrem</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Device_ItemNo__c</fullName>
        <description>Field is used for sharing rules in PARALIGN Cases. Case created on Device where ItemNo starts &quot;PARALIGN 79&quot; will trigger a sharing rule which gives RW access for Public group &quot;PARALIGN Service Group Munich&quot;.</description>
        <label>DeviceItemNo</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Error_comment__c</fullName>
        <label>Error Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ptt_Error_intensity_DE_1__c</fullName>
        <description>Created for on request of SDIC for usage with Conga Composer.</description>
        <formula>IF( ISPICKVAL(ptt_Error_intensity_en__c, &quot;, trend is stable&quot;), &quot;, Trend ist stabil&quot;, 
IF( ISPICKVAL(ptt_Error_intensity_en__c, &quot;, trend is highly increasing&quot;), &quot;, Trend ist stark steigend&quot;,
IF( ISPICKVAL(ptt_Error_intensity_en__c, &quot;, trend is increasing&quot;), &quot;, Trend ist steigend&quot;,
IF( ISPICKVAL(ptt_Error_intensity_en__c, &quot;, trend is decreasing&quot;), &quot;, Trend ist abfallend&quot;,
IF( ISPICKVAL(ptt_Error_intensity_en__c, &quot;, trend is instable&quot;), &quot;, Trend ist instabil&quot;,
&quot;&quot;
)
)
)
)
)</formula>
        <label>Error intensity DE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Error_intensity_en__c</fullName>
        <label>Error intensity EN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>, trend is stable</fullName>
                </value>
                <value>
                    <fullName>, trend is highly increasing</fullName>
                </value>
                <value>
                    <fullName>, trend is increasing</fullName>
                </value>
                <value>
                    <fullName>, trend is decreasing</fullName>
                </value>
                <value>
                    <fullName>, trend is instable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_JIRA_Issue_URL__c</fullName>
        <inlineHelpText>Put here a link to JIRA. Example https://jira.pruftechnik.com/jira/ projects/OMTC/issues/OMTC-722</inlineHelpText>
        <label>JIRA Issue URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ptt_Last_Modified_Date_Only__c</fullName>
        <formula>TEXT(DATEVALUE((LastModifiedDate)))</formula>
        <label>Last Modified - Date Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Parent_Customer_Asset__c</fullName>
        <description>Show Parent customer asset on customer asset cases.</description>
        <formula>Customer_Asset__r.Parent_Customer_Asset__r.Name</formula>
        <label>Parent Customer Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>sf42_Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ptt_Work_minutes_spent__c</fullName>
        <inlineHelpText>Please specify how much minutes was spent to solve that case.</inlineHelpText>
        <label>Work time (min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_cmb_status__c</fullName>
        <description>Field describes Change Management Board case status.</description>
        <label>CMB Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved in progress</fullName>
                </value>
                <value>
                    <fullName>Decision in progress</fullName>
                    <default>true</default>
                    <label>Decision in progress</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>On hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_systemic_change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field describes if cases have an impact on systemic change.</description>
        <label>Change in the system</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_Old_ID__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf42_SG_Legacy_Case_Number__c</fullName>
        <description>Can be removed after 2012-10-17 if no complains from Singapore
Case https://pruftechnik.my.salesforce.com/500D000000HWA7L</description>
        <label>SG Legacy Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_ca_sg_Product_1_ca_sg__c</fullName>
        <label>SG Product 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_ca_sg_Product_2_ca_sg__c</fullName>
        <label>SG Product 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_ca_sg_Product_3_ca_sg__c</fullName>
        <label>SG Product 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_ca_sg_Product_Serial_1_ca_sg__c</fullName>
        <label>SG Product Serial No. 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_ca_sg_Product_Serial_2_ca_sg__c</fullName>
        <label>SG Product Serial No. 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf42_ca_sg_Product_Serial_3_ca_sg__c</fullName>
        <label>SG Product Serial No. 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf42_de_Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>sf42_Devices__c.Customer_Asset__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer_Asset__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>sf42_Devices__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Linked_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Linked Cases</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Order_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>JP Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_jp_PO_Number__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <externalId>true</externalId>
        <label>JP PO-Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Case_Number__c</fullName>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>SG Case Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Current_Location__c</fullName>
        <label>SG Current Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>In-house</fullName>
                </value>
                <value>
                    <fullName>T-Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_New_Case_Auto_Number__c</fullName>
        <description>Can be removed after 2012-10-17 if no complains from Singapore
Case https://pruftechnik.my.salesforce.com/500D000000HWA7L</description>
        <displayFormat>{0000}/2K{YY}/</displayFormat>
        <label>SG New Case Auto-Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>sf42_sg_New_Case_Ref_Number__c</fullName>
        <description>Can be removed after 2012-10-17 if no complains from Singapore
Case https://pruftechnik.my.salesforce.com/500D000000HWA7L</description>
        <formula>sf42_sg_New_Case_Auto_Number__c+IF( sf42_sg_TLoan_Checkbox__c, &quot;Loan&quot;,&quot;Cali&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SG New Case Ref Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Quotation_Ref_Number__c</fullName>
        <label>SG Quotation Ref Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_sg_TLoan_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SG T-Loan Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Customer_Asset_Cases</fullName>
        <active>true</active>
        <businessProcess>Customer Asset Case Process</businessProcess>
        <description>Problem and Findings in Customer Assets</description>
        <label>Customer Asset Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>Paralign_Device_support</fullName>
        <active>true</active>
        <businessProcess>Paralign Devices Processes</businessProcess>
        <description>Use this type to report problems with Paralign devices</description>
        <label>Paralign Device Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Support</fullName>
        <active>true</active>
        <businessProcess>Product Support Processes</businessProcess>
        <description>Use this type to report problems with Products, calibration etc.</description>
        <label>Product Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quotation_Support</fullName>
        <active>true</active>
        <businessProcess>Quotation Support Process</businessProcess>
        <description>To provision of the structural plan and budget offer</description>
        <label>Quotation Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Support_Ticket</fullName>
        <active>true</active>
        <businessProcess>Support Case Processes</businessProcess>
        <description>Use this type to ask administrator for support with Salesforce CRM.</description>
        <label>Support Ticket</label>
    </recordTypes>
    <validationRules>
        <fullName>Contact_Reqired_for_Quotation_Support_Ca</fullName>
        <active>true</active>
        <description>Contact is Required on The Opportunity for Quotation_Support_Case</description>
        <errorConditionFormula>AND(ISBLANK(Quotation_Support_Opportunity__r.sf42_gl_Contact__c), RecordTypeId =&quot;0122p000000lBiu&quot;)</errorConditionFormula>
        <errorMessage>Contact details is missing on the OPPORTUNITY record. Go to the Opportunity record and select the Contact details.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SDIC_Cases_VR1</fullName>
        <active>true</active>
        <description>Component or Device has to be filled in case creation. Case cannot contains both empty fields or both filled fields.</description>
        <errorConditionFormula>OR(
AND(RecordType.Id = &quot;012D0000000B9ZO&quot;, ISBLANK(sf42_de_Device__c), ISBLANK(Customer_Asset_2__c)),
AND(RecordType.Id = &quot;012D0000000B9ZO&quot;,NOT(ISBLANK(sf42_de_Device__c)), NOT(ISBLANK(Customer_Asset_2__c)))
)</errorConditionFormula>
        <errorDisplayField>Customer_Asset_2__c</errorDisplayField>
        <errorMessage>Component or Device has to be filled.</errorMessage>
    </validationRules>
</CustomObject>